# gd-auto-clipper

./: .gitignore  CMakeLists.txt  README.md  about.md  mod.json
src/: main.cpp  obs.cpp  obs.hpp
